--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -11,13 +11,34 @@ body {
         .left-content {
             display: inline;
             position: absolute;
+            margin: 1vh;
+            margin-bottom: 1vh;
+            margin-left: 1.3vw;
+            margin-top: 1.5vh;
 
             img {
-                max-width: 400px;
-                min-height: 60px;
+                // max-width: 400px;
+                // min-height: 60px;
+                width: auto;
+                height: auto;
+
             }
         }
 
+        .logoText{
+            display: inline;
+            position: absolute;
+            margin: 1vh;
+            margin-bottom: 1vh; 
+            margin-left: 4.5vw;
+            margin-top: 1vh;
+
+            p {
+                font-family: 'Lato', sans-serif;
+                font-size: 2.1vh;
+                color: rgb(33, 33, 93);
+            }
+        }
         .right-content {
             display: inline;
             position: absolute;
@@ -30,7 +51,7 @@ body {
                 li {
                     display: inline;
                     margin-left: 15px;
-                    font-family: roboto;
+                    font-family: 'Muli', sans-serif;;
                     cursor: pointer;
                     font-weight: bold;
                 }
@@ -40,27 +61,38 @@ body {
 
     .section1 {
         position: relative;
-        margin-top: 25px;
-        height: 520px;
+        margin-top: 10px;
+        height: 900px;
         width: 100%;
-        background-image: linear-gradient(to right, #d23174 , #f34938);
-        border-bottom-left-radius: 50%;
-        border-bottom-right-radius: 50%;
+        // THIVIN -- Changing to PNG
+        // background-image: url("../asset_files/Base1.png") ;
+        // background-repeat: no-repeat;
+        // background-image: linear-gradient(to right, #d23174 , #f34938);
+        // border-bottom-left-radius: 50%;
+        // border-bottom-right-radius: 50%;
 
         .center-text {
             position: absolute;
             top: 6%;
             left: 28%;
             color: WHITE;
-            font-size: 3em;
+            font-size: 3vw;
+            font-family: 'Muli', sans-serif;
+        }
+
+        svg path
+        {
+            fill: url(#my-cool-gradient) #f34938;
         }
 
         .sec1-img {
             position: absolute;
-            max-height: 155px;
-            max-width: 170px;
-            top: 31%;
-            left: 46%;
+            // max-height: 160%;
+            // max-width: 270px;
+            width: 14%;
+            height: 29%;
+            top: 25%;
+            left: 45%;
         }
 
         .mountain-img {
@@ -73,34 +105,35 @@ body {
 
         .left-circle {
             position: absolute;
-            height: 80px;
-            width: 80px;
-            bottom: -11px;
-            left: 139px;
+            height: 120px;
+            width: 120px;
+            bottom: 8%;
+            left: 18%;
             background-image: linear-gradient(to right, #d23174 , #f34938);
             border-radius: 50%;
         }
 
         .right-circle {
             position: absolute;
-            height: 170px;
-            width: 170px;
-            bottom: 40px;
-            right: 145px;
+            height: 15vw;
+            width: 15vw;
+            bottom: 9vw;
+            right: 9vw;
             background-image: linear-gradient(to right, #d23174 , #f34938);
             border-radius: 50%;
         }
     }
 
     .section2 {
-        margin: 8% 5% 0% 8%;
+        margin:0% 12% 0% 12%;
         display: block;
         position: relative;
-        height: 500px;
+        height: 600px;
+        font-family: Muli;
 
         h3 {
-            font-size: 33px;
-            font-family: calibra;
+            font-size: 5.6vh;
+            font-family: Muli;
         }
 
         .left-session {
@@ -110,6 +143,7 @@ body {
 
             p {
                 font-size: 20px;
+                text-align: justify;;
             }
         }
 
@@ -117,32 +151,35 @@ body {
             position: absolute;
             display: inline;
             left: 67%;
-            max-width: 50%;
-            max-height: 50%;
-            top: 0px;
+            max-width: 60%;
+            max-height: 60%;
+            top: -10px;
         }
 
         img {
-            width: 320px;
-            height: 320px;
+            width: 25vw;
+            height: 25vw;
         }
     }
 
     .section3 {
+        margin-top: 20px;
+        .sec3-backimg
+        {
+            width: 100%;
+            max-height: 2150px;
+        }
         position: relative;
         height: 654px;
 
         .upper {
-            position: absolute;
-            height: 830px;
-            width: 100%;
-            background-image: linear-gradient(to right, #d23174 , #f34938);
-            border-top-left-radius: 35%;
-            border-top-right-radius: 35%;
 
             .sec3-heading {
-                font-size: 2.5em;
+                font-size: 2.2vw;
                 color: white;
+                font-family: Muli;
+                
+
 
                 .sec3-main-heading {
                     position: absolute;
@@ -152,20 +189,23 @@ body {
 
                 .sec3-sub-heading {
                     position: absolute;
-                    left: 10%;
-                    top: 11%;
+                    left: 14%;
+                    top: 9%;
                 }
             }
 
             .sec3-content {
                 display: block;
+                font-family: Muli;
+            
+
 
                 .sec3-img {
                     display: inline-block;
                     width: 50%;
                     position: absolute;
-                    top: 30%;
-                    left: 10%;
+                    top: 27%;
+                    left: 12%;
                 }
 
                 .sec3-text {
@@ -174,7 +214,7 @@ body {
                     width: 50%;
                     color: white;
                     top: 30%;
-                    font-size: 28px;
+                    font-size: 3.2vh;
                     left: 50%;
                 }
             }
@@ -185,12 +225,20 @@ body {
             top: 100%;
             height: 520px;
             width: 100%;
-            background-image: linear-gradient(to bottom , #f34938, #d23174);
-            border-top-left-radius: 35%;
-            border-top-right-radius: 35%;
 
             .modules {
-                
+                font-family: "Muli";
+                position: absolute;
+                left: 45%;
+                font-size: 185%;
+                color: white;
+            }
+
+            img {
+                position: absolute;
+                top: 14%;
+                max-width: 650px;
+                left: 26%;
             }
         }
     }
