--- a/docs/styles.css
+++ b/docs/styles.css
@@ -8,53 +8,83 @@ body {
   display: block;
   position: relative;
 }
+
 #main-container .header .left-content {
   display: inline;
   position: absolute;
+  margin: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 1.3vw;
+  margin-top: 1.5vh;
 }
+
 #main-container .header .left-content img {
-  max-width: 400px;
-  min-height: 60px;
+  width: auto;
+  height: auto;
 }
+
+#main-container .header .logoText {
+  display: inline;
+  position: absolute;
+  margin: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 4.5vw;
+  margin-top: 1vh;
+}
+
+#main-container .header .logoText p {
+  font-family: 'Lato', sans-serif;
+  font-size: 2.1vh;
+  color: #21215d;
+}
+
 #main-container .header .right-content {
   display: inline;
   position: absolute;
   right: 30px;
   top: 15px;
 }
+
 #main-container .header .right-content .nav-items {
   display: block;
 }
+
 #main-container .header .right-content .nav-items li {
   display: inline;
   margin-left: 15px;
-  font-family: roboto;
+  font-family: 'Muli', sans-serif;
   cursor: pointer;
   font-weight: bold;
 }
+
 #main-container .section1 {
   position: relative;
-  margin-top: 25px;
-  height: 520px;
+  margin-top: 10px;
+  height: 900px;
   width: 100%;
-  background-image: linear-gradient(to right, #d23174, #f34938);
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
 }
+
 #main-container .section1 .center-text {
   position: absolute;
   top: 6%;
   left: 28%;
   color: WHITE;
-  font-size: 3em;
+  font-size: 3vw;
+  font-family: 'Muli', sans-serif;
 }
+
+#main-container .section1 svg path {
+  fill: url(#my-cool-gradient) #f34938;
+}
+
 #main-container .section1 .sec1-img {
   position: absolute;
-  max-height: 155px;
-  max-width: 170px;
-  top: 31%;
-  left: 46%;
+  width: 14%;
+  height: 29%;
+  top: 25%;
+  left: 45%;
 }
+
 #main-container .section1 .mountain-img {
   position: absolute;
   max-height: 120px;
@@ -62,107 +92,138 @@ body {
   top: 67%;
   left: 47%;
 }
+
 #main-container .section1 .left-circle {
   position: absolute;
-  height: 80px;
-  width: 80px;
-  bottom: -11px;
-  left: 139px;
+  height: 120px;
+  width: 120px;
+  bottom: 8%;
+  left: 18%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#d23174), to(#f34938));
   background-image: linear-gradient(to right, #d23174, #f34938);
   border-radius: 50%;
 }
+
 #main-container .section1 .right-circle {
   position: absolute;
-  height: 170px;
-  width: 170px;
-  bottom: 40px;
-  right: 145px;
+  height: 15vw;
+  width: 15vw;
+  bottom: 9vw;
+  right: 9vw;
+  background-image: -webkit-gradient(linear, left top, right top, from(#d23174), to(#f34938));
   background-image: linear-gradient(to right, #d23174, #f34938);
   border-radius: 50%;
 }
+
 #main-container .section2 {
-  margin: 8% 5% 0% 8%;
+  margin: 0% 12% 0% 12%;
   display: block;
   position: relative;
-  height: 500px;
+  height: 600px;
+  font-family: Muli;
 }
+
 #main-container .section2 h3 {
-  font-size: 33px;
-  font-family: calibra;
+  font-size: 5.6vh;
+  font-family: Muli;
 }
+
 #main-container .section2 .left-session {
   display: inline;
   position: absolute;
   max-width: 50%;
 }
+
 #main-container .section2 .left-session p {
   font-size: 20px;
+  text-align: justify;
 }
+
 #main-container .section2 .right-session {
   position: absolute;
   display: inline;
   left: 67%;
-  max-width: 50%;
-  max-height: 50%;
-  top: 0px;
+  max-width: 60%;
+  max-height: 60%;
+  top: -10px;
 }
+
 #main-container .section2 img {
-  width: 320px;
-  height: 320px;
+  width: 25vw;
+  height: 25vw;
 }
+
 #main-container .section3 {
+  margin-top: 20px;
   position: relative;
   height: 654px;
 }
-#main-container .section3 .upper {
-  position: absolute;
-  height: 830px;
+
+#main-container .section3 .sec3-backimg {
   width: 100%;
-  background-image: linear-gradient(to right, #d23174, #f34938);
-  border-top-left-radius: 35%;
-  border-top-right-radius: 35%;
+  max-height: 2150px;
 }
+
 #main-container .section3 .upper .sec3-heading {
-  font-size: 2.5em;
+  font-size: 2.2vw;
   color: white;
+  font-family: Muli;
 }
+
 #main-container .section3 .upper .sec3-heading .sec3-main-heading {
   position: absolute;
   left: 47%;
   top: 0%;
 }
+
 #main-container .section3 .upper .sec3-heading .sec3-sub-heading {
   position: absolute;
-  left: 10%;
-  top: 11%;
+  left: 14%;
+  top: 9%;
 }
+
 #main-container .section3 .upper .sec3-content {
   display: block;
+  font-family: Muli;
 }
+
 #main-container .section3 .upper .sec3-content .sec3-img {
   display: inline-block;
   width: 50%;
   position: absolute;
-  top: 30%;
-  left: 10%;
+  top: 27%;
+  left: 12%;
 }
+
 #main-container .section3 .upper .sec3-content .sec3-text {
   display: inline-block;
   position: absolute;
   width: 50%;
   color: white;
   top: 30%;
-  font-size: 28px;
+  font-size: 3.2vh;
   left: 50%;
 }
+
 #main-container .section3 .lower {
   position: absolute;
   top: 100%;
   height: 520px;
   width: 100%;
-  background-image: linear-gradient(to bottom, #f34938, #d23174);
-  border-top-left-radius: 35%;
-  border-top-right-radius: 35%;
 }
 
+#main-container .section3 .lower .modules {
+  font-family: "Muli";
+  position: absolute;
+  left: 45%;
+  font-size: 185%;
+  color: white;
+}
+
+#main-container .section3 .lower img {
+  position: absolute;
+  top: 14%;
+  max-width: 650px;
+  left: 26%;
+}
 /*# sourceMappingURL=styles.css.map */
